Se agrego la funcionalidad en que los select se cargan desde la BD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #server.port=8090 (SE PUEDE CAMBIAR EL PUERTO)
 
-spring.datasource.url=jdbc:mysql://localhost/pascamuy?serverTimezone=America/El_Salvador&useSSL=false
-#spring.datasource.url=jdbc:mysql://localhost/aaa?serverTimezone=America/Puerto_Rico&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost/pascamuy?serverTimezone=America/El_Salvador&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/pascamuy?serverTimezone=America/Puerto_Rico&useSSL=false 
 spring.datasource.username=root
 spring.datasource.password=
 
